--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Children''s songs'
 - !lcc 'PZ'
+- GITenberg
 title: The Mother's Nursery Songs
 url: http://www.gutenberg.org/ebooks/42612
